--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular4-files-upload": "^1.0.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-password-strength-bar": "^1.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
